# image_processing_coursework

./: README.md
lab3/: CMakeLists.txt  main.cpp  notes.md
lab4/: CMakeLists.txt  attitude.cpp  attitude.h  cartesian_position.cpp  cartesian_position.h  dataset.cpp  dataset.h  geodetic_position.cpp  geodetic_position.h  intrinsics.cpp  intrinsics.h  lab_1_2.cpp  lab_1_2.h  local_coordinate_system.cpp  local_coordinate_system.h  main.cpp  perspective_camera_model.cpp  perspective_camera_model.h  viewer_3d.cpp  viewer_3d.h
